wip minor issue with header group not aligning with main content

--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,7 @@ body {
 }
 
 #content-overlay {
-  z-index: 999999;
+  z-index: 100;
   display: none;
   opacity: 0;
   right: 13rem;
@@ -394,7 +394,7 @@ a {
   top: -20rem;
   left: 0;
   right: 0;
-  transition: top 1s;
+  transition: top 1s, right 0.5s ease;
 }
 
 .header {
@@ -994,7 +994,7 @@ nav {
   overflow-x: hidden;
   background-color: #262834;
   color: white;
-  z-index: -998;
+  z-index: -100;
   display: none;
   text-transform: uppercase;
 }
