--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,5 @@
 html {
-    font-size: 16px;
-  
+    font-size: 16px;  
 }
 
 body {
@@ -22,10 +21,6 @@ body {
     opacity: 0;   
 }   
 
-// .content-overlay {
-//     transition: opacity 0.5s ease;  
-// }
-
 .overlay-base {
   
     position: fixed;
@@ -39,7 +34,7 @@ body {
 #content-overlay {   
     @extend .overlay-base; 
 
-    z-index: 999999;
+    z-index: 100;
     display: none;
 
     opacity: 0;
