--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -24,12 +24,12 @@
 }
 
 .header-group {
-    background-color: white;
-   // position: fixed;
+    background-color: white;  
     top: -20rem;
     left: 0;
     right: 0;
-    transition: top 1s;    
+    transition: top 1s,
+                right 0.5s ease;    
 }
 
 .header {
