--- a/scss/layout/_mobile-menu.scss
+++ b/scss/layout/_mobile-menu.scss
@@ -16,7 +16,7 @@
     overflow-x: hidden;
     background-color: #262834; 
     color: white; 
-    z-index: -998; 
+    z-index: -100; 
     display: none;
     text-transform: uppercase; 
 }
